Bug 95352 - autocorrect replacement table column misalignment after resize
Summary: autocorrect replacement table column misalignment after resize
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
5.0.0.4 rc
Hardware: Other Windows (All)
: medium minor
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.1.0 target:5.0.4
Keywords: regression
Depends on:
Blocks:
 
Reported: 2015-10-27 06:47 UTC by tommy27
Modified: 2016-10-25 19:19 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
screenshot (184.26 KB, image/jpeg)
2015-10-27 06:47 UTC, tommy27
Details

Note You need to log in before you can comment on or make changes to this bug.
Description tommy27 2015-10-27 06:47:02 UTC
Created attachment 119991 [details]
screenshot

tested under Win7 x64 and Win8.1 x64 using LibO 5.0.0.4 and 5.0.3.1

STEPS TO REPRODUCE

1- load the autocorrect replacement table from menu "Tools/AutoCorrect Options"
2- resize the table multiple times

CORRECT BEHAVIOUR
autocorrect replacement table columns should stay aligned to the "Replace" and "With" fields at any time.

CURRENT BEHAVIUOUR
misalignment of the "With" column entries happens as depicted in the screenshot.


this is a 5.0.x regression since it never happened in the previous 5.0.x releases.

issue persists in LibO 5.1.0.0.alpha1+ (x64)
Build ID: a62bc6a65abb47adb0e4caff7e38823c15b302fc
TinderBox: Win-x86_64@62-TDF, Branch:MASTER, Time: 2015-10-24_23:49:43
Locale: it-IT (it_IT)
Comment 1 Buovjaga 2015-11-03 09:16:36 UTC
Repro, but only on Windows.

Win 7 Pro 64-bit Version: 5.1.0.0.alpha1+
Build ID: 37d41674c2b1a706c95c2c326cbfbd06b0c1a655
TinderBox: Win-x86@62-merge-TDF, Branch:MASTER, Time: 2015-11-02_00:13:27
Locale: fi-FI (fi_FI)

Ubuntu 15.10 64-bit 
Version: 5.0.2.2
Build ID: 00m0(Build:2)
Locale: en-US (en_US.UTF-8)
Comment 2 tommy27 2015-11-03 11:07:20 UTC
@Caolan
one for you?
Comment 3 Caolán McNamara 2015-11-04 13:07:30 UTC
I can fix it I believe. Seems that is was always possible this could come about, presumably some timer/idle thing made it more obvious.
Comment 4 Commit Notification 2015-11-04 13:57:14 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d4d4e00a5a449bdf46608ce0cecbfa07c340e555

Resolves: tdf#95352 resize the columns when the edits reposition

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 tommy27 2015-11-05 21:06:11 UTC
autocorrect columns alignment issue is gone -> VERIFIED  :-)

however now I notice 2 new regressions...  :-(

see Bug 95616 and Bug 95618
Comment 6 Commit Notification 2015-11-26 19:36:54 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6213ce4ab8621ad307df25c1fd2bfeb8de5dd1f6&h=libreoffice-5-0

Resolves: tdf#95352 resize the columns when the edits reposition

It will be available in 5.0.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.