Resolves: tdf#95352 resize the columns when the edits reposition

instead of assuming they are in their final position when the
top level dialog resizes. Cause there's a timer/idle involved
so the final position isn't known yet

(cherry picked from commit d4d4e00a5a449bdf46608ce0cecbfa07c340e555)

Change-Id: I713e938b0e275f181514315cb4ce4531f36191ca